[workspace.package]
version = "2.3.3"
authors = ["lollipop.builders"]
repository = "https://github.com/LollipopHQ"
homepage = "https://www.lollipop.builders/"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

# Clippy lint configuration that can not be applied in clippy.toml
[workspace.lints.clippy]
arithmetic_side_effects = "deny"
default_trait_access = "deny"
manual_let_else = "deny"
used_underscore_binding = "deny"

[workspace]
resolver = "3"
members = [
    "xtask",
    "sbpf-jam", 
    "solana-bpf-loader-program",
    "solana-program-runtime",
    "sbpf-polkavm",
    "client"]
exclude = [
    "./litesvm",
    "./solana-programs/*"
]

[patch.crates-io]
solana-bpf-loader-program = {path = "./solana-bpf-loader-program"}
solana-sbpf = {path = "./sbpf"}
solana-program-runtime = {path = "./solana-program-runtime"}

[workspace.dependencies]
bincode = "1.3.3"
base64 = "0.22.1"
enum-iterator = "1.5.0"
itertools = "0.12.1"
log = "0.4.27"
percentage = "0.1.0"
rand = "0.8.5"
serde = "1.0"
anyhow = "1.0"

libsecp256k1 = {version = "0.6.0", features = ["std","static-context",], default-features = false}
num-traits = "0.2"
qualifier_attr = { version = "0.2.2", default-features = false }
sbpf-polkavm = {path = "./sbpf-polkavm"}
scopeguard = { version = "1.2.0" }
solana-account = "=2.2.1"
solana-account-info = "=2.2.1"
solana-big-mod-exp = "=2.2.1"
solana-bincode = "=2.2.1"
solana-blake3-hasher = "=2.2.1"
solana-bn254 = "=2.2.2"
solana-clock = "=2.2.2"
solana-compute-budget = "=2.3.3"
solana-cpi = "=2.2.1"
solana-curve25519 = "=2.3.3"
solana-feature-set = "=2.2.5"
solana-fee-structure = "2.3.0"
solana-frozen-abi = {version = "2.2.2"}
solana-frozen-abi-macro = {version = "2.2.1"}
solana-hash = "=2.3.0"
solana-instruction = "=2.3.0"
solana-keccak-hasher = "=2.2.1"
solana-loader-v3-interface = { version = "5.0.0", features = ["serde"] }
solana-loader-v4-interface = { version = "=2.2.1", features = ["bincode"] }
solana-log-collector = "=2.3.3"
solana-measure = "=2.3.3"
solana-metrics = "=2.3.3"
solana-packet = "=2.2.1"
solana-poseidon = "=2.3.3"
solana-precompiles = "=2.2.1"
solana-program-entrypoint = "2.2.1"
solana-program-memory = "=2.2.1"
solana-program-runtime = "=2.3.3"
solana-pubkey = "=2.4.0"
solana-sbpf = {path = "./sbpf"}
solana-sdk = "2.3.1"
solana-sdk-ids = "=2.2.1"
solana-secp256k1-recover = "=2.2.1"
solana-sha256-hasher = "=2.2.1"
solana-stable-layout = "=2.2.1"
solana-svm-callback = "=2.3.3"
solana-svm-feature-set = "=2.3.3"
solana-system-interface = "1.0"
solana-sysvar = "=2.2.2"
solana-sysvar-id = "=2.2.1"
solana-timings = "=2.3.3"
solana-transaction = "=2.2.3"
solana-transaction-context = { version = "=2.3.3", features = ["bincode"] }
solana-type-overrides = "=2.3.3"
thiserror = "2.0.12"


assert_matches = "1.5.0"
criterion = "0.5.1"

solana-bpf-loader-program = { path = ".", features = ["svm-internal"] }
solana-epoch-rewards = "=2.2.1"
solana-epoch-schedule = "=2.2.1"
solana-fee-calculator = "=2.2.1"
solana-last-restart-slot = "=2.2.1"
solana-program = {version = "=2.2.1", default-features = false}
solana-rent = "=2.2.1"
solana-slot-hashes = "=2.2.1"
static_assertions = "1.1.0"
test-case = "3.3.1"